--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "scripts": {
     "fetch": "node scripts/fetch-currencies.js",
+    "build": "tsc",
     "test": "jest",
     "test:watch": "jest --watchAll"
   },
