--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@magicaltrip/money",
   "version": "1.0.0",
-  "main": "lib/index.js",
-  "types": "lib/index.d.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "repository": "git@github.com:magicaltrip/money.git",
   "author": "Marcelo Alves <alves@libra.co.jp>",
   "license": "MIT",
