--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@magicaltrip/money",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "repository": "git@github.com:magicaltrip/money.git",
@@ -14,12 +14,15 @@
     "test:watch": "jest --watchAll"
   },
   "devDependencies": {
-    "@types/jest": "24.0.20",
+    "@types/jest": "25.1.3",
     "@types/xml2js": "0.4.5",
-    "jest": "24.9.0",
-    "ts-jest": "24.1.0",
-    "typescript": "3.6.4",
-    "xml2js": "0.4.22"
+    "jest": "25.1.0",
+    "ts-jest": "25.2.1",
+    "typescript": "3.8.2",
+    "xml2js": "0.4.23"
   },
+  "files": [
+    "dist"
+  ],
   "sideEffects": false
 }
